<resources>
    <string name="app_name">ChatProjectBoilerplate</string>
    <string name="phone_hint">Phone number</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="enter_code_from_sms">Enter code from sms</string>
    <string name="enter_your_phone_number_to_sign_in">Enter your phone number to sign in</string>
    <string name="enter_code">Enter code</string>
    <string name="filed_cannot_be_empty">Field cannot be empty!</string>
    <string name="phone_number_str">phone_number</string>
    <string name="phone_number_s">Phone number</string>
    <string name="signing_up">Signing up</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="enter_your_username">Enter your username:</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name:</string>
    <string name="too_short_name">Too short name</string>
    <string name="too_short_username">Too short username</string>
    <string name="birthday">Birthday: %s</string>
    <string name="e">Username: %s</string>
    <string name="city_s">City: %s</string>
    <string name="phone_s">Phone: %s</string>
    <string name="edit">Edit</string>
    <string name="edit_your_profile">Edit your profile</string>
    <string name="birthdaysd">Birthday:</string>
    <string name="city">City</string>
    <string name="instagram">Instagram:</string>
    <string name="vk">VK:</string>
    <string name="indalid_date">Invalid date, user 1900-01-01</string>
</resources>