<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <TextView
        android:id="@+id/sign_up_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signing_up"
        android:fontFamily="@font/roboto_medium"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        />

    <TextView
        android:id="@+id/phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number_s"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/sign_up_header"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        />

    <TextView
        android:id="@+id/phone_number_tv"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="89174p47175"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@id/phone_number"
        app:layout_constraintBottom_toBottomOf="@id/phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp"
        />

    <TextView
        android:id="@+id/enter_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_name"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/phone_number"
        app:layout_constraintStart_toStartOf="@id/phone_number"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/enter_name_ed"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:fontFamily="@font/roboto_medium"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@id/enter_name_tv"
        app:layout_constraintBottom_toBottomOf="@id/enter_name_tv"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:background="@drawable/phone_number_input_bg"
        android:padding="4dp"
        />

    <TextView
        android:id="@+id/enter_username_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_username"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/enter_name_tv"
        app:layout_constraintStart_toStartOf="@id/enter_name_tv"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/enter_username_ed"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:maxLines="1"
        app:layout_constraintTop_toTopOf="@id/enter_username_tv"
        app:layout_constraintBottom_toBottomOf="@id/enter_username_tv"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp"
        android:background="@drawable/phone_number_input_bg"
        android:padding="4dp"
        android:gravity="center"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_up_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:fontFamily="@font/roboto_medium"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/enter_username_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/btn_background"
        />

</androidx.constraintlayout.widget.ConstraintLayout>