<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <TextView
        android:id="@+id/enter_code_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_code"
        android:fontFamily="@font/roboto_medium"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="130dp"
        />

    <EditText
        android:id="@+id/coe_ed"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_code_from_sms"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:gravity="center"
        android:fontFamily="@font/roboto_medium"
        android:textColorHint="@color/grey"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:padding="10dp"
        android:background="@drawable/phone_number_input_bg"
        android:inputType="number"
        android:digits="0123456789"
        android:maxLength="6"
        app:layout_constraintTop_toBottomOf="@id/enter_code_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_in_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:fontFamily="@font/roboto_medium"
        android:textSize="16sp"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/coe_ed"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="40dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>