<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <TextView
        android:id="@+id/welcome_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:fontFamily="@font/roboto_medium"
        android:textSize="22sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="140dp"
        />

    <TextView
        android:id="@+id/enter_phone_to_singin_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_phone_number_to_sign_in"
        android:fontFamily="@font/roboto_medium"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/welcome_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        />

    <com.earl.chatprojectboilerplate.presentation.viewgroups.ChooseCountryPhoneCodeView
        android:id="@+id/choose_country_flag_and_code_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/phoneEditText"
        app:layout_constraintBottom_toBottomOf="@id/phoneEditText"
        app:layout_constraintEnd_toStartOf="@id/phoneEditText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        />

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/phone_hint"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:gravity="center"
        android:fontFamily="@font/roboto_medium"
        android:textColorHint="@color/grey"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:padding="10dp"
        android:background="@drawable/phone_number_input_bg"
        app:layout_constraintTop_toBottomOf="@id/enter_phone_to_singin_tv"
        android:layout_marginBottom="100dp"
        app:layout_constraintStart_toEndOf="@id/choose_country_flag_and_code_view"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:maxLength="10"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_in_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:fontFamily="@font/roboto_medium"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/phoneEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/btn_background"
        />

</androidx.constraintlayout.widget.ConstraintLayout>